# aep-components

./: Makefile  README.md  buf.gen.yaml  buf.work.yaml  buf.yaml  go.mod  package-lock.json  package.json  tsconfig.json
.github/workflows/: build-and-publish-protos.yaml  lint.yaml  publish-python.yml  python-test.yml
json_schema/: decimal.yaml  money.yaml  oneof.yaml  phone_number.yaml
json_schema/api/: operation.yaml
json_schema/extensions/: x-aep-field.yaml  x-aep-long-running-operation.yaml  x-aep-resource.yaml
json_schema/type/: decimal.yaml  interval.yaml  money.yaml  operation.yaml  problems.yaml
json_schema/types/: decimal.yaml  interval.yaml  money.yaml  operation.yaml  problems.yaml
proto/aep-api/: buf.yaml
proto/aep-api/aep/api/: buf.yaml  field_behavior.proto  field_info.proto  idempotency_key.proto  oneof_behavior.proto  operation.proto  problem_details.proto  resource.proto  webhook.proto
proto/aep-conformance/: buf.yaml
proto/aep-type/: buf.yaml
proto/aep-type/aep/type/: decimal.proto  interval.proto  money.proto  phone_number.proto
python/: .gitignore  README.md  pyproject.toml  regenerate.sh
python/aep_types/aep/type/: decimal_pb2.py  interval_pb2.py  money_pb2.py  phone_number_pb2.py
python/aep_types/aep_type/aep/type/: decimal_pb2.py  decimal_pb2_grpc.py
python/aep_types/decimal/: __init__.py
python/tests/: test_decimal.py
schemas/: oneof.md
schemas/api/: operation.md
schemas/type/: interval.md  money.md  operation.md  phone_number.md
scripts/: test-validation.ts  validate-patterns.ts
(+2 files in other folders)
