[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aep-types"
version = "0.0.1"
authors = [
  { name="Richard Frankel", email="richard@frankel.tv" },
]
description = "AEP Types"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "jsonschema",
    "PyYAML",
]

[project.urls]
"Homepage" = "https://aep.dev"
"Bug Tracker" = "https://github.com/aep-dev/aep-components/issues"

[project.optional-dependencies]
dev = [
    "pytest",
    "grpcio-tools",
    "protobuf",
]

[tool.hatch.build]
packages = ["aep_types"]
force-include = { "../json_schema/type/decimal.yaml" = "aep_types/schemas/type/decimal.yaml" }